--- a/app/src/main/res/layout/event_feed_item.xml
+++ b/app/src/main/res/layout/event_feed_item.xml
@@ -24,6 +24,7 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageMembers"
+        android:layout_marginStart="@dimen/_8sdp"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_12sdp"
@@ -57,7 +58,12 @@
         android:textColor="@color/white"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:scrollHorizontally="true"
         app:layout_constraintBottom_toBottomOf="@id/viewSupporter"
+        app:layout_constraintEnd_toStartOf="@+id/imageMembers"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/headerBackground" />
 
