--- a/app/src/main/res/menu/student_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/student_bottom_nav_menu.xml
@@ -18,9 +18,13 @@
         android:title="@string/title_messages" />
 
     <item
+        android:id="@+id/navigation_friends"
+        android:icon="@drawable/ic_members"
+        android:title="@string/friends" />
+
+    <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/baseline_settings_24"
-        android:title="@string/Settings"
-       />
+        android:title="@string/Settings" />
 
 </menu>
