--- a/app/src/main/res/navigation/mobile_navigation_student.xml
+++ b/app/src/main/res/navigation/mobile_navigation_student.xml
@@ -22,12 +22,15 @@
         android:id="@+id/navigation_messages_activity"
         android:name="com.example.studygo.activities.ActivityMessages"
         android:label="@string/title_messages"
-        tools:layout="@layout/activity_messages"
-        />
+        tools:layout="@layout/activity_messages" />
+
+    <fragment
+        android:id="@+id/navigation_friends"
+        android:name="com.example.studygo.activities.ui.friends.FriendsFragment"
+        android:label="@string/friends" />
 
     <fragment
         android:id="@+id/navigation_settings"
         android:name="com.example.studygo.activities.ui.settings.PreferenceFragment"
-        android:label="@string/Settings"
-        />
+        android:label="@string/Settings" />
 </navigation>
