--- a/app/src/main/res/layout/item_container_recieved_message.xml
+++ b/app/src/main/res/layout/item_container_recieved_message.xml
@@ -6,6 +6,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/_4sdp">
 
+    <TextView
+        android:id="@+id/textSenderName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:paddingBottom="@dimen/_2sdp"
+        android:textColor="@color/secondary_text"
+        android:textSize="@dimen/_10ssp"
+        app:layout_constraintStart_toStartOf="@id/textMessage"
+        app:layout_constraintBottom_toTopOf="@id/textMessage"/>
+
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/imageProfile"
         android:layout_width="@dimen/_25sdp"
@@ -31,7 +42,7 @@
         android:textColor="@color/white"
         android:textSize="@dimen/_13ssp"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textSenderName"
         app:layout_constraintWidth_percent="0.75"/>
     
     <TextView
